// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source no_pragma.4gl 1`] = `
main 
  display "hello "
end main
----------
MAIN
  DISPLAY "hello "

END MAIN



`;

exports[`Source pragma.4gl 1`] = `
--@format
main 
  display "hello "
end main
----------
--@format
MAIN
  DISPLAY "hello "

END MAIN



`;
